# rust-bitcoin-core

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  IMPLEMENTATION_STATUS_2025_09_07.md  INSTALL.md  README.md  USER_GUIDE.md  bitcoin.conf  docker-compose.yml  flake.nix  node_output.txt  test_mempool.sh  test_mempool_mining.sh  test_mining.sh  test_node.sh  test_opcodes.rs  test_rpc.py  test_rpc.sh  test_submitblock.sh
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
benches/: performance_bench.rs
bitcoin-cli/: Cargo.toml
bitcoin-cli/src/: main.rs
bitcoin-node/: Cargo.toml
bitcoin-node/src/: config.rs  enhanced_config.rs  headers_sync.rs  integration.rs  lib.rs  main.rs  metrics.rs  node.rs  node_coordinator.rs  node_runner.rs  prometheus_metrics.rs  sync.rs
bitcoin-node/tests/: integration_test.rs
core/: Cargo.toml
core/:memory:/db/: db  snap.000000000000030E
core/:memory:/sled_temp/: db  snap.000000000000043F
core/src/: bip112.rs  bip113.rs  bip143.rs  bip68.rs  bitcoin_primitives.rs  block_index.rs  block_index_persistence.rs  block_validation.rs  block_validation_pipeline.rs  chain.rs  chain_reorg.rs  chain_reorganization.rs  chain_stats.rs  checkpoints.rs  coinbase.rs  compact_filters.rs  config.rs  consensus.rs  consensus_rules.rs  database.rs  database_sled.rs  difficulty.rs  error.rs  fee.rs  fee_estimation.rs  fee_estimator.rs  lib.rs  merkle.rs  orphan_blocks.rs  parallel_validation.rs  pow_validation.rs  reorg.rs  script_interpreter.rs  segwit.rs  taproot.rs  taproot_activation_tests.rs  transaction_validation.rs  tx_validator.rs  utxo_cache.rs  utxo_cache_levels.rs  (+8 more)
core/src/script/: error.rs  flags.rs  interpreter.rs  mod.rs  opcodes.rs  signature.rs  stack.rs  test_bip112.rs  test_vectors.rs  tests.rs
core/test/db/: db  snap.000000000000060B
core/test/sled_temp/: db  snap.000000000000080E
core/tests/: bitcoin_core_vectors.rs  consensus_test_vectors.rs  mainnet_blocks.rs  transaction_vectors.rs  validation_tests.rs
mempool/: Cargo.toml
mempool/src/: expiration.rs  fee_estimation.rs  lib.rs  mempool_acceptance.rs  mempool_manager.rs  mempool_persistence.rs  package_relay.rs  persistence.rs  pool.rs  rbf.rs  relay_policy.rs  utxo_provider.rs  validation.rs
mempool/tests/: enhanced_rbf_simple_test.rs  enhanced_rbf_test.rs  package_relay_test.rs  rbf_test.rs
miner/: Cargo.toml
miner/src/: block_template.rs  difficulty.rs  fee_calculator.rs  lib.rs  miner.rs  pow.rs  sigop_counter.rs  template.rs  tx_selection.rs
miner/tests/: mining_test.rs
mining/src/: block_template_builder.rs  lib.rs
monitoring/src/: lib.rs
network/: Cargo.toml
network/benches/: bip152_benchmarks.rs
network/src/: addr_manager.rs  ban_score.rs  block_download.rs  bloom_filter.rs  compact_block_protocol.rs  compact_blocks.rs  connection.rs  connection_retry.rs  discovery.rs  dos_protection.rs  headers_sync.rs  ibd.rs  lib.rs  manager.rs  message.rs  orphan_pool.rs  peer.rs  peer_manager.rs  peer_persistence.rs  rate_limiter.rs  relay.rs  sync.rs  sync_trait.rs  tx_relay.rs  wire_compact_blocks.rs
network/src/tests/: mod.rs  tx_relay_tests.rs
network/tests/: bip152_integration_test.rs  compact_blocks_integration_test.rs  compact_blocks_test.rs  sync_test.rs
regtest-data/db/: db
regtest-data/sled_temp/: db
regtest-data/wallet/: db  wallet.enc
rpc/: Cargo.toml
rpc/src/: auth.rs  error.rs  lib.rs  rpc_implementation.rs  server.rs  simple_server.rs
rpc/tests/: simple_test.rs
rust-bitcoin-core/: Cargo.toml
rust-bitcoin-core/src/: lib.rs  main.rs
src/: main.rs  node_orchestrator.rs
storage/: Cargo.toml
storage/src/: address_index.rs  block_store.rs  chain_state.rs  database.rs  error.rs  lib.rs  manager.rs  optimized_storage.rs  optimized_storage_sled.rs  pruning.rs  tx_index.rs  undo_store.rs  utxo.rs  utxo_cache.rs  utxo_snapshot.rs  utxo_store.rs
systemd/: bitcoin-node.service
test-data/chain_state/: db
test-data/db/: db
test-data/sled_temp/: db
test-data/wallet/: db  wallet.enc
testnet-data/db/: db
testnet-data/sled_temp/: db
testnet-data/wallet/: db  wallet.enc
tests/: end_to_end_test.rs  ibd_test.rs  integration_test.rs  mempool_test.rs  network_integration_test.rs  network_sync_test.rs  reorg_test.rs  stress_test.rs  wallet_integration_test.rs  wallet_persistence_test.rs
wallet/: Cargo.toml
wallet/src/: address.rs  autosave.rs  balance.rs  blockchain_scanner.rs  coin_selection.rs  encryption.rs  error.rs  fee_calculator.rs  hd_wallet.rs  keychain.rs  lib.rs  mining_wallet.rs  raw_transaction.rs  signer.rs  storage.rs  transaction.rs  transaction_signer.rs  wallet.rs  wallet_manager.rs
