[workspace]
members = [
    "bitcoin-node",
    "bitcoin-cli",
    "core",
    "network",
    "storage",
    "mempool",
    "miner",
    "wallet",
    "rpc",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["rust-bitcoin-core contributors"]
edition = "2021"
rust-version = "1.75.0"
license = "MIT"
repository = "https://github.com/yourusername/rust-bitcoin-core"

[workspace.dependencies]
# rust-bitcoin ecosystem
bitcoin = { version = "0.32", features = ["serde", "rand-std"] }
bitcoin_hashes = "0.14"
secp256k1 = { version = "0.29", features = ["global-context", "rand", "serde"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"

# Database
sled = "0.34"

# Compression (pure Rust for musl compatibility)
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
snap = "1.1"  # Pure Rust Snappy compression

# Hashing
sha2 = "0.10"

# Networking
quinn = "0.11"
tower = "0.5"
bytes = "1.7"

# RPC
jsonrpsee = { version = "0.24", features = ["server", "client", "macros"] }
hyper = { version = "1.0", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"

# Configuration
config = "0.14"
dotenvy = "0.15"
toml = "0.8"

# Utilities
once_cell = "1.19"
parking_lot = "0.12"
dashmap = "6.0"
lru = "0.12"
indexmap = "2.3"
rayon = "1.10"
rand = "0.8"
bitflags = "2.4"
dirs = "5.0"
base64 = "0.22"
num-bigint = "0.4"
num-traits = "0.2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Memory mapping
memmap2 = "0.9"

# Testing
mockall = "0.13"
proptest = "1.5"
criterion = "0.5"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.bench]
inherits = "release"

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 2