[package]
name = "bitcoin-core-lib"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal
storage = { path = "../storage" }

# Database
sled = { workspace = true }
bincode = "1.3"
tempfile = "3.8"

# Bitcoin
bitcoin = { workspace = true }
bitcoin_hashes = { workspace = true }
secp256k1 = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
parking_lot = { workspace = true }
dashmap = { workspace = true }
indexmap = { workspace = true }
chrono = { workspace = true }
bitflags = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
futures = { workspace = true }
lru = { workspace = true }
sha1 = "0.10"
memmap2 = { workspace = true }
rayon = "1.10"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
toml = "0.8"

# CLI and Config
clap = { version = "4.4", features = ["derive"] }
dirs = "5.0"

# Logging
tracing = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }