[package]
name = "mempool"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal
bitcoin-core-lib = { path = "../core" }
miner = { path = "../miner" }
storage = { path = "../storage" }

# Bitcoin
bitcoin = { workspace = true }
hex = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
parking_lot = { workspace = true }
dashmap = { workspace = true }
indexmap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
