[package]
name = "network"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal
bitcoin-core-lib = { path = "../core" }
mempool = { path = "../mempool" }
storage = { path = "../storage" }

# Bitcoin
bitcoin = { workspace = true }
bitcoin_hashes = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Networking
quinn = { workspace = true }
bytes = { workspace = true }
tokio-util = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
parking_lot = { workspace = true }
dashmap = { workspace = true }
rand = { workspace = true }
dirs = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "bip152_benchmarks"
harness = false
