[package]
name = "wallet"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal
btc-core = { path = "../core", package = "bitcoin-core-lib" }

# Bitcoin
bitcoin = { workspace = true }
bitcoin_hashes = { workspace = true }
secp256k1 = { workspace = true }

# BIP39 only (BIP32 is in bitcoin crate)
bip39 = "2.0"

# Database
sled = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
rand = { workspace = true }
hex = { workspace = true }

# Encryption
chacha20poly1305 = "0.10"
argon2 = "0.5"
zeroize = { version = "1.7", features = ["zeroize_derive"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"